# pinboard-to-sqlite

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini
.github/workflows/: publish.yml  test.yml
pinboard_to_sqlite/: cli.py
tests/: posts.json  test_pinboard_to_sqlite.py
